Packed file compression; Mirroring cannon support; Deleting old files after packing; Code quality ++ (:iapprove:);